# django-tasks-redis

./: .gitignore  PROMETHEUS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
django_tasks_redis/: __init__.py  admin.py  apps.py  backends.py  executor.py  urls.py  utils.py  views.py
django_tasks_redis/locale/ja/LC_MESSAGES/: django.po
django_tasks_redis/management/commands/: purge_completed_redis_tasks.py  run_redis_tasks.py
django_tasks_redis/metrics/: __init__.py  collectors.py  signals.py
django_tasks_redis/templates/admin/django_tasks_redis/redistask/: detail.html
examples/: README.md  prometheus_example.py
examples/demo_app/: tasks.py  urls.py  views.py
examples/demo_app/templates/demo_app/: index.html  result.html
examples/example_project/: settings.py  urls.py
tests/: conftest.py  settings.py  tasks.py  test_admin.py  test_backend.py  test_commands.py  test_executor.py  test_metrics.py  test_utils.py  test_views.py  urls.py
